<resources>
    <string name="app_name">Quest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_this_quest">Complete this quest!</string>
    <string name="quest">Quest</string>
    <string name="exp_dummy_data">150 EXP</string>
    <string name="quest_title_dummy_data">Create with a Local Master</string>
    <string name="quest_summary_dummy_data">Take one of our locals\' offered ceramics workshops!</string>
    <string name="quest_description_dummy_data">Sign up for a local workshop, show up and get your hands dirty, and capture a picture of your work!</string>
    <string name="registerButton_message">Register</string>
    <string name="loginButton_message">Login</string>
    <string name="email_message">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="displayName_message">Enter your display name</string>
    <string name="confirmPassword_hint">Confirm your password</string>
    <string name="reviewsHomePageTitle">See Reviews for a Path</string>
    <string name="see_reviews">See Reviews</string>

    <string name="review_title">Enter a title for your review</string>
    <string name="write_your_review">Write your review here!</string>
    <string name="post_review">Post Review</string>

    <string name="please_equip_path">Please equip a path in the search page! You currently have no path equipped.</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="reviews">Reviews</string>
</resources>