<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin" >

    <EditText
        android:id="@+id/email_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/email_message"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_loginPage"
        app:layout_constraintStart_toStartOf="@+id/email_loginPage"
        app:layout_constraintTop_toBottomOf="@+id/email_loginPage" />

    <Button
        android:id="@+id/loginButton_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/loginButton_message"
        app:layout_constraintEnd_toEndOf="@+id/password_loginPage"
        app:layout_constraintStart_toStartOf="@+id/password_loginPage"
        app:layout_constraintTop_toBottomOf="@+id/password_loginPage" />
</androidx.constraintlayout.widget.ConstraintLayout>