<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    android:background="@color/quest_cyan">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp">
        app:cardBackgroundColor="@color/quest_cyan"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">
            android:background="@color/quest_cyan">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="205dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/quest_light_pink"
                app:cardCornerRadius="10dp"
                app:contentPadding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_QuestType"
                        android:layout_width="81dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bergen_sans_regular"
                        android:text="@string/quest"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_ExpValue"
                        android:layout_width="81dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bergen_sans_regular"
                        android:text="@string/exp_dummy_data"
                        android:textAlignment="textEnd"
                        android:textColor="@color/quest_pink"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardBackgroundColor="@color/quest_light_pink"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:contentPadding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_QuestName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tcb"
                        android:letterSpacing="0.03"
                        android:text="@string/quest_title_dummy_data"
                        android:textColor="@color/quest_blue"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_QuestSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tcm"
                        android:text="@string/quest_summary_dummy_data"
                        android:textColor="@color/quest_pink"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textView_QuestName"
                        app:layout_constraintTop_toBottomOf="@+id/textView_QuestName" />

                    <ImageView
                        android:id="@+id/imageView_QuestImage"
                        android:layout_width="377dp"
                        android:layout_height="172dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_QuestSummary"
                        app:srcCompat="@drawable/no_image_found" />

                    <TextView
                        android:id="@+id/textView_QuestDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/tcm"
                        android:text="@string/quest_description_dummy_data"
                        android:textColor="@color/quest_blue"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="@+id/textView_QuestSummary"
                        app:layout_constraintTop_toBottomOf="@+id/imageView_QuestImage" />

                    <Button
                        android:id="@+id/button_CompleteQuest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/quest_cyan"
                        android:fontFamily="@font/tcb"
                        android:letterSpacing="0.05"
                        android:text="@string/complete_this_quest"
                        android:textAllCaps="false"
                        android:textColor="@color/quest_blue"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_QuestDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>