<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPathReviewsPage">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/quest_gold">

        <TextView

            android:id="@+id/textView_IndividualPathNameReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/tcb"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_WriteReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/editText_ReviewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/tcm"
                android:hint="@string/review_title"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editText_ReviewComment"
                app:layout_constraintEnd_toStartOf="@+id/button_PostReview"
                app:layout_constraintStart_toStartOf="@+id/editText_ReviewComment" />


            <EditText
                android:id="@+id/editText_ReviewComment"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/tcm"
                android:gravity="start|top"
                android:hint="@string/write_your_review"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_PostReview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bergen_sans_regular"
                android:text="@string/post_review"
                app:layout_constraintBottom_toBottomOf="@+id/editText_ReviewTitle"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReviews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout_WriteReview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_IndividualPathNameReviews" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>